# matam_ex1

./: .gitignore  CMakeLists.txt
Dry/: dry1.c  dry2.c  dry2_test.c
Wet/: Makefile  amount_set_str.c  amount_set_str.h  amount_set_str_list_str.c  amount_set_str_list_str.h  amount_set_str_list_str_tests.c  amount_set_str_list_str_tests_main.c  amount_set_str_main.c  amount_set_str_tests.c  amount_set_str_tests.h  list_str.c  list_str.h  list_str_tests.c  list_str_tests.h  list_str_tests_main.c  matamikya.c  matamikya_help.c  matamikya_help.h  matamikya_order.c  matamikya_order.h  matamikya_product.c  matamikya_product.h  matamikya_tests.c
Wet/tests/: amount_set_str_main.c  amount_set_str_tests.c  matamikya_main.c  matamikya_tests.c
Wet/tests/extra/: matamikya_tests.c  p_best_selling_expected.txt  p_inventory_expected.txt  p_order.txt
Wet/tests/extra/biadsy_tests/: biadsy_matamikya_tests.c
Wet/tests/extra/biadsy_tests/actual_output/: testMtmPrintBestSelling_1.txt  testMtmPrintBestSelling_5.txt  testMtmPrintBestSelling_6.txt  testMtmPrintInventory_2.txt  testMtmPrintOrder_3.txt  testMtmPrintOrder_5.txt
Wet/tests/extra/biadsy_tests/expected_output/: testMtmPrintBestSelling_1.txt  testMtmPrintBestSelling_2.txt  testMtmPrintBestSelling_4.txt  testMtmPrintInventory_1.txt  testMtmPrintInventory_3.txt  testMtmPrintOrder_1.txt  testMtmPrintOrder_2.txt  testMtmPrintOrder_4.txt  testMtmPrintOrder_5.txt  testMtmPrintOrder_6.txt
